syntax = "proto3";

package utility;

service UtilityService {
  rpc SendEmail(SendEmailRequest) returns (SendMailResponse);
  rpc SendSms(SendSmsRequest) returns (SendSmsResponse);
  rpc CreateOtp(OtpRequest) returns (GenerateOtpResponse);
  rpc VerifyOtp(VerifyOtpRequest) returns (VerifyOtpResponse);
}

enum templateType {
    welcome = 0;
    otp = 1;
    reset = 2;
    verify = 3;
}

message Otp {
  string id = 1;
  string sentTo = 2;
  string otp = 3;
}

message To {
  string email = 1;
  string name = 2;
}

message MailContent {
    templateType template = 1;
    repeated string data = 2;
}

message SendEmailRequest {
  To to = 1;
  string subject = 2;
  MailContent body = 3;
}

message SendSmsRequest {
  string to = 1;
  string message = 2;
}

message OtpRequest {
  string sendTo = 1;
}

message VerifyOtpRequest {
  string sendTo = 1;
  string code = 2;
}

message GenerateOtpResponse {
  uint32 otp = 1;
}

message VerifyOtpResponse {
   oneof result {
    Otp otpRecord = 1;
    bool invalid = 2;
   }
}

message SendMailResponse {
  uint32 statusCode = 1;
}

message SendSmsResponse {
  uint32 statusCode = 1;
}
